--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,15 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    hikari:
+      jdbc-url: jdbc:h2:mem:testdb
+      driver-class-name: org.h2.Driver
+      username: sa
+      password:
+      connection-init-sql: RUNSCRIPT FROM 'classpath:/data-h2.sql'
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
       path: /h2
+
